<resources>
    <string name="app_name">CollegeDatabaseApplication</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="second_name">Second name</string>
    <string name="qualification">Qualification</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="credits">Credits</string>
</resources>
